config/manifests/kudo-system-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  labels:
    app: kudo-manager
  name: kudo-system
spec: {}
status: {}
